--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <tr>
       <td><img src="song.png" alt="isagi yoichi" width="200" /></td>
       <td>
-        <h1>amine oualla</h1>
+        <h1>amine ahmed</h1>
         <p>
           <em> Student in <strong>Nassim</strong> high school </em>
         </p>
